quote and FB icon no longer collapse with nav bar

--- a/css/_base.css
+++ b/css/_base.css
@@ -21,7 +21,7 @@ body{
     height:45px;
     width:45px;
     margin-top:3px;
-    margin-left:25px;
+    margin-left:10px;
     margin-right:10px;
     border:0;
 }
@@ -40,6 +40,14 @@ body{
         width:200px;
         margin-top:31px;
     }
+    .btn-default{
+        font-size:1.2em;
+        margin-right:10px;
+        
+    }
+    .btn-fb{
+        margin-right:20px;
+    }
 }
 
 /* sm */
@@ -51,9 +59,13 @@ body{
         width:200px;
         margin-top:31px;
     }
+    .btn-default{
+        font-size:1.5em;
+        margin-right:30px;
+
+    }
     .btn-fb{
-        margin-right:0;
-        margin-left:10px;
+        margin-right:50px;
     }
 }
 
@@ -66,9 +78,13 @@ body{
         width:250px;
         margin-top:16px;
     }
+    .btn-default{
+        font-size:1.3em;
+        margin-right:10px;
+    }
     .btn-fb{
-    margin-left:25px;
-    margin-right:10px;
+        margin-right:10px;
+        margin-left:0;
     }
 }
 
@@ -80,12 +96,17 @@ body{
     div#logo-container{
         width:300px;
     }
-    .btn-fb{
-    margin-left:25px;
-    margin-right:10px;
-    }
+
     #dynamic-content{
     margin-top:127px;
+    }
+    .btn-default{
+        font-size: 1.8em;
+        margin-right:20px;
+    }
+    .btn-fb{
+        margin-right:10px;
+        margin-left:0;
     }
 }
 
@@ -93,40 +114,41 @@ body{
 
 
 @media (max-width: 1020px) {
-  .navbar-header {
-      float: none;
-  }
-  .navbar-left,.navbar-right {
-      float: none !important;
-  }
-  .navbar-toggle {
-      display: block;
-  }
-  .navbar-collapse {
-      border-top: 1px solid transparent;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  }
-  .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-  }
-  .navbar-collapse.collapse {
-      display: none!important;
-  }
-  .navbar-nav {
-      float: none!important;
-      margin-top: 7.5px;
-  }
-  .navbar-nav>li {
-      float: none;
-  }
-  .navbar-nav>li>a {
-      padding-top: 10px;
-      padding-bottom: 10px;
-  }
-  .collapse.in{
-      display:block !important;
-  }
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
 }
 
 
